# internal/controller/get_author_books.go
@@ -1,32 +1,42 @@
 package controller
 
 import (
-	"github.com/project/library/generated/api/library"
-	"google.golang.org/grpc"
+	"context"
+
+	"go.uber.org/zap"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/types/known/timestamppb"
+
+	"github.com/project/library/generated/api/library"
 )
 
-func (i *implementation) GetAuthorBooks(req *library.GetAuthorBooksRequest, server grpc.ServerStreamingServer[library.Book]) error {
-	ctx := server.Context()
+func (i *impl) GetAuthorBooks(req *library.GetAuthorBooksRequest, server library.Library_GetAuthorBooksServer) error {
+	i.logger.Debug("Received GetAuthorBooks request",
+		zap.String("author Id", req.GetAuthorId()))
+
 	if err := req.ValidateAll(); err != nil {
+		i.logger.Error("Invalid GetAuthorBooks request", zap.Error(err))
 		return status.Error(codes.InvalidArgument, err.Error())
 	}
 
-	books, err := i.booksUseCase.GetAuthorBooks(ctx, req.GetAuthorId())
+	books, err := i.booksUseCase.GetAuthorBooks(context.Background(), req.GetAuthorId())
 
 	if err != nil {
-		return i.convertErr(err)
+		i.logger.Error("Failed to get author books", zap.Error(err))
+		return i.ConvertErr(err)
 	}
 
 	for _, book := range books {
-		if err := server.Send(
-			&library.Book{
-				Id:       book.ID,
-				Name:     book.Name,
-				AuthorId: book.AuthorIDs,
-			}); err != nil {
-			return i.convertErr(err)
+		err := server.Send(&library.Book{
+			Id:        book.ID,
+			Name:      book.Name,
+			AuthorId:  book.AuthorIDs,
+			CreatedAt: timestamppb.New(book.CreatedAt),
+			UpdatedAt: timestamppb.New(book.UpdatedAt),
+		})
+		if err != nil {
+			return err
 		}
 	}
 
